UPD: New locations button at FO header

--- a/catalog/view/theme/helium/template/information/contact.twig
+++ b/catalog/view/theme/helium/template/information/contact.twig
@@ -1,148 +1,11 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main role="main" id="information-contact">
-      {{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      <h2>{{ text_location }}</h2>
-      <div class="address">
-        <div>
-          {% if image %}
-            <div>
-              <img loading="lazy" src="{{ image }}" alt="{{ store }}" title="{{ store }}" />
-            </div>
-          {% endif %}
-          <div>
-            <div>
-              <p>{{ store }}</p>
-              <address>
-                {{ address }}
-              </address>
-              {% if geocode %}
-                <a class="button" href="https://maps.google.com/maps?q={{ geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="icon-location"></i> {{ button_map }}</a>
-              {% endif %}
-            </div>
-            <div>
-              <p>{{ text_telephone }}</p>
-              <a href="tel:{{ telephone }}" rel="phone">{{ telephone }}</a>
-            </div>
-            <div>
-              {% if fax %}
-                <p>{{ text_fax }}</p>
-                {{ fax }}
-              {% endif %}
-            </div>
-            <div>
-              {% if open %}
-                <p>{{ text_open }}</p>
-                {{ open }}
-              {% endif %}
-              {% if comment %}
-                <p>{{ text_comment }}</p>
-                {{ comment }}
-              {% endif %}
-            </div>
-          </div>
-        </div>
-      </div>
-
-      {% if locations %}
-        <h3>{{ text_store }}</h3>
-        
-          {% for location in locations %}
-            <div class="">
-              <h2>{{ location.name }}</h2>
-              
-                <div>
-                  {% if location.image %}
-                  <div class="col-sm-3"><img loading="lazy" src="{{ location.image }}" alt="{{ location.name }}" title="{{ location.name }}" class="img-thumbnail" /></div>
-                  {% endif %}
-                  <div class="col-sm-3">
-                    <p>{{ location.name }}</p>
-                    <address>
-                      {{ location.address|nl2br }}
-                    </address>
-                    {% if location.geocode %}
-                      <a href="https://maps.google.com/maps?q={{ location.geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="icon-location"></i> {{ button_map }}</a>
-                    {% endif %}
-                  </div>
-                  <div>
-                    {% if location.map %}
-                      <iframe>
-                      {{ location.map|raw|raw }}
-                      </iframe>
-                    {% endif %}
-                  </div>
-                  <div> 
-                    <p>{{ text_telephone }}</p>
-                    {{ location.telephone }}
-                    
-                    {% if location.fax %}
-                      <p>{{ text_fax }}</p>
-                      {{ location.fax }}
-                    {% endif %}
-                  </div>
-                  <div>
-                    {% if location.open %}
-                    <p>{{ text_open }}</p>
-                    {{ location.open|nl2br }}
-                    
-                    {% endif %}
-                    {% if location.comment %}
-                    <p>{{ text_comment }}</p>
-                    {{ location.comment }}
-                    {% endif %}
-                  </div>
-              </div>
-            </div>
-          {% endfor %}
-        
-      {% endif %}
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" >
-        <fieldset>
-          <legend>{{ text_contact }}</legend>
-          <div class="form-group required">
-            <label for="input-name">{{ entry_name }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="name" value="{{ name }}" id="input-name" />
-              {% if error_name %}
-              <span class="text-danger">{{ error_name }}</div>
-              {% endif %}
-            </div>
-          </div>
-          <div class="form-group required">
-            <label for="input-email">{{ entry_email }}</label>
-            <input
-              type="email"
-              name="email"
-              value="{{ email }}"
-              placeholder="{{ entry_email }}"
-              id="input-email"
-              inputmode="email"
-              enterkeyhint="next"
-            />
-            {% if error_email %}
-              <span class="text-danger">{{ error_email }}</div>
-            {% endif %} 
-          </div>
-          <div class="form-group required">
-            <label for="input-enquiry">{{ entry_enquiry }}</label>
-            <div class="col-sm-10">
-              <textarea name="enquiry" rows="10" id="input-enquiry" class="form-control">{{ enquiry }}</textarea>
-              {% if error_enquiry %}
-              <span class="text-danger">{{ error_enquiry }}</div>
-              {% endif %}
-            </div>
-          </div>
-          {{ captcha }}
-        </fieldset>
-        <div class="buttons">
-          <div class="pull-right">
-            <input type="submit" class="primary"  value="{{ button_submit }}" />
-          </div>
-        </div>
-      </form>
-      {{ content_bottom }}
-    {{ column_left }}
-    {{ column_right }}
+  {{ content_top }}
+  {% include 'helium/template/information/contact_grid.twig' %}
+  {% include 'helium/template/information/contact_form.twig' %}
+  {{ content_bottom }}
+  {{ column_left }}
+  {{ column_right }}
 </main>
 {{ footer }}
