--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -68,11 +68,33 @@
 }
 /* Neccessary */
 * {box-sizing: border-box; scroll-behavior:smooth}
-body {font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Segoe UI Emoji,Apple Color Emoji,Noto Color Emoji,sans-serif;font-family:'Roboto',sans-serif;line-height:1.4;word-wrap:normal;color:var(--color-text);text-rendering:optimizeLegibility;
-    background:var(--gardient-2);margin: 0 auto;width: 100%;max-width: 100%;overflow-x:hidden;display: flex;flex-wrap:wrap;gap:1rem;padding:0}
+body {
+    font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Segoe UI Emoji,Apple Color Emoji,Noto Color Emoji,sans-serif;
+    font-family:'Roboto',sans-serif;
+    line-height:1.4;
+    word-wrap:normal;
+    color:var(--color-text);
+    text-rendering:optimizeLegibility;
+    background:var(--gardient-2);
+    margin: 0 auto;
+    width: 100%;
+    max-width: 100%;
+    overflow-x:hidden;
+    display: flex;
+    flex-wrap:wrap;
+    gap:1rem;
+    padding:0;
+    text-wrap: balance; /* Carefuly wrap text */
+}
 
 /* Responsive images and videos */
 img,video,iframe[src*="youtube"] {max-width: 100%;height: auto}
+iframe[src*="maps"] {
+    border-radius: var(--radius);
+    box-shadow: var(--blocks-shadow);
+    width: 100%;
+    max-width: 100%;
+}
 /* Unstyled lists */
 .list-unstyled {padding: 0; margin: 0; list-style-type: none}
 /* Normalize appearence */
@@ -796,7 +818,7 @@ input[name="quantity"] {max-width: 80px}
 /* Pages */
 /* Category */
 /* Category - scrollable description */
-main #category_description {overflow-y:auto;max-height:200px;position:relative;width:100%;border-radius: var(--radius)}
+main #category_description {overflow-y:auto;max-height:200px;position:relative;width:100%;border-radius: var(--radius);text-align: justify;}
 span.price-new {color: var(--danger); font-weight: 600;}
 .short-description {flex: 1}
 span.price-old {color: var(--color-text-muted);font-size: 1rem;flex: 1 0 100%;display: flex;justify-content: center;padding: .5rem;}
@@ -921,7 +943,6 @@ input#input-quantity {text-align: center}
         display: flex;
         justify-content: space-between;
     }
-    ul.contents.scroll-x {justify-content: end}
     .product_top #photos, .product_top .infos {max-width: 50%;}
     body {
         flex-direction: row;
@@ -970,7 +991,8 @@ input#input-quantity {text-align: center}
     }
     hgroup .wrapper {
         display: flex;
-        justify-content: end
+        justify-content: end;
+        max-width: 70%;
     }
     hgroup .title {flex: 1;}
     hgroup h1 {align-items: flex-start;}
