JS: Remove jquery code

--- a/catalog/view/theme/helium/template/checkout/payment_address.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_address.twig
@@ -261,88 +261,88 @@
   </div>
 </form>
 <script type="text/javascript"><!--
-$('input[name=\'payment_address\']').on('change', function() {
-	if (this.value == 'new') {
-		$('#payment-existing').hide();
-		$('#payment-new').show();
-	} else {
-		$('#payment-existing').show();
-		$('#payment-new').hide();
-	}
-});
+// $('input[name=\'payment_address\']').on('change', function() {
+// 	if (this.value == 'new') {
+// 		$('#payment-existing').hide();
+// 		$('#payment-new').show();
+// 	} else {
+// 		$('#payment-existing').show();
+// 		$('#payment-new').hide();
+// 	}
+// });
 //--></script>
 <script type="text/javascript"><!--
 // Sort the custom fields
-$('#collapse-payment-address .form-group[data-sort]').detach().each(function() {
-	if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#collapse-payment-address .form-group').length-2) {
-		$('#collapse-payment-address .form-group').eq(parseInt($(this).attr('data-sort'))+2).before(this);
-	}
+// $('#collapse-payment-address .form-group[data-sort]').detach().each(function() {
+// 	if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#collapse-payment-address .form-group').length-2) {
+// 		$('#collapse-payment-address .form-group').eq(parseInt($(this).attr('data-sort'))+2).before(this);
+// 	}
 
-	if ($(this).attr('data-sort') > $('#collapse-payment-address .form-group').length-2) {
-		$('#collapse-payment-address .form-group:last').after(this);
-	}
+// 	if ($(this).attr('data-sort') > $('#collapse-payment-address .form-group').length-2) {
+// 		$('#collapse-payment-address .form-group:last').after(this);
+// 	}
 
-	if ($(this).attr('data-sort') == $('#collapse-payment-address .form-group').length-2) {
-		$('#collapse-payment-address .form-group:last').after(this);
-	}
+// 	if ($(this).attr('data-sort') == $('#collapse-payment-address .form-group').length-2) {
+// 		$('#collapse-payment-address .form-group:last').after(this);
+// 	}
 
-	if ($(this).attr('data-sort') < -$('#collapse-payment-address .form-group').length-2) {
-		$('#collapse-payment-address .form-group:first').before(this);
-	}
-});
+// 	if ($(this).attr('data-sort') < -$('#collapse-payment-address .form-group').length-2) {
+// 		$('#collapse-payment-address .form-group:first').before(this);
+// 	}
+// });
 //--></script>
 <script type="text/javascript"><!--
-$('#collapse-payment-address button[id^=\'button-payment-custom-field\']').on('click', function() {
-	var element = this;
+// $('#collapse-payment-address button[id^=\'button-payment-custom-field\']').on('click', function() {
+// 	var element = this;
 
-	$('#form-upload').remove();
+// 	$('#form-upload').remove();
 
-	$('body').prepend('<form enctype="multipart/form-data" id="form-upload" style="display: none;"><input type="file" name="file" /></form>');
+// 	$('body').prepend('<form enctype="multipart/form-data" id="form-upload" style="display: none;"><input type="file" name="file" /></form>');
 
-	$('#form-upload input[name=\'file\']').trigger('click');
+// 	$('#form-upload input[name=\'file\']').trigger('click');
 
-	if (typeof timer != 'undefined') {
-    	clearInterval(timer);
-	}
+// 	if (typeof timer != 'undefined') {
+//     	clearInterval(timer);
+// 	}
 
-	timer = setInterval(function() {
-		if ($('#form-upload input[name=\'file\']').val() != '') {
-			clearInterval(timer);
+// 	timer = setInterval(function() {
+// 		if ($('#form-upload input[name=\'file\']').val() != '') {
+// 			clearInterval(timer);
 
-			$.ajax({
-				url: 'index.php?route=tool/upload',
-				type: 'post',
-				dataType: 'json',
-				data: new FormData($('#form-upload')[0]),
-				cache: false,
-				contentType: false,
-				processData: false,
-				beforeSend: function() {
-					$(element).button('loading');
-				},
-				complete: function() {
-					$(element).button('reset');
-				},
-				success: function(json) {
-					$(element).parent().find('.text-danger').remove();
+// 			$.ajax({
+// 				url: 'index.php?route=tool/upload',
+// 				type: 'post',
+// 				dataType: 'json',
+// 				data: new FormData($('#form-upload')[0]),
+// 				cache: false,
+// 				contentType: false,
+// 				processData: false,
+// 				beforeSend: function() {
+// 					$(element).button('loading');
+// 				},
+// 				complete: function() {
+// 					$(element).button('reset');
+// 				},
+// 				success: function(json) {
+// 					$(element).parent().find('.text-danger').remove();
 
-					if (json['error']) {
-						$(element).parent().find('input[name^=\'custom_field\']').after('<span class="text-danger">' + json['error'] + '</div>');
-					}
+// 					if (json['error']) {
+// 						$(element).parent().find('input[name^=\'custom_field\']').after('<span class="text-danger">' + json['error'] + '</div>');
+// 					}
 
-					if (json['success']) {
-						alert(json['success']);
+// 					if (json['success']) {
+// 						alert(json['success']);
 
-						$(element).parent().find('input[name^=\'custom_field\']').val(json['code']);
-					}
-				},
-				error: function(xhr, ajaxOptions, thrownError) {
-					alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
-				}
-			});
-		}
-	}, 500);
-});
+// 						$(element).parent().find('input[name^=\'custom_field\']').val(json['code']);
+// 					}
+// 				},
+// 				error: function(xhr, ajaxOptions, thrownError) {
+// 					alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+// 				}
+// 			});
+// 		}
+// 	}, 500);
+// });
 //--></script>
 <script type="text/javascript"><!--
 // $('.date').datetimepicker({
