--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -195,6 +195,14 @@ form {
 label {cursor:pointer; user-select: none;}
 .form-group {display: flex;flex: 1;align-items: center; padding: 0.5rem;  border-radius: var(--radius); flex-wrap: wrap; }
 .form-group label {flex: 1 1 auto;max-width: 8rem}
+/* For multiple lined up inputs in form group */
+.form-group input:first-of-type:not(:last-of-type) {border-radius: var(--radius) 0 0 var(--radius);margin-right: 2px;}
+.form-group input:last-of-type:not(:first-of-type) {border-radius: 0 var(--radius) var(--radius) 0;}
+.form-group.required label:before {
+    content: '*';
+    color: red;
+    padding: 0 .25rem 0 0;
+}
 .form-group input, .form-group select {flex: 1}
 .has-error {
     box-shadow: inset 0 0 0 2px var(--danger);
@@ -238,14 +246,13 @@ a.button:focus {
     transition: color var(--time);
 }
 input[type="checkbox"], input[type="radio"] {
-    /* Add if not using autoprefixer */
-    -webkit-appearance: none;
     /* Remove most all native input styles */
-    appearance: none;
+    -webkit-appearance: none;
     /* For iOS < 15 */
-    background-color: var(--bg-inputs);
+    appearance: none;
     /* Not removed via appearance */
     margin: 0;
+    background-color: var(--bg-inputs);
     font: inherit;
     color: currentColor;
     width: 30px;
@@ -511,7 +518,7 @@ details[disabled], details[disabled] summary {color: var(--color-text-muted);poi
 
 /* Dialogs */
 /* dialog {border: none; outline: transparent; box-shadow: 0 0 5px #333; position: fixed; transition: transform var(--time) var(--style); transform: scale3d(0,0,0);  scrollbar-gutter: auto!important;} */
-dialog {border: none; outline: transparent; box-shadow: 0 0 5px #333; position: fixed; scrollbar-gutter: auto!important;}
+dialog {border: none; outline: transparent; box-shadow: 0 0 5px #333; position: fixed; scrollbar-gutter: auto!important; backdrop-filter: blur(3px);}
 dialog.animate{transition: transform var(--time) var(--style); transform: scale3d(0,0,0); }
 dialog.visible {transform: scale3d(1,1,1);}
 dialog::backdrop {
@@ -532,16 +539,22 @@ dialog::backdrop {
     }
 }
 
-button.close {width: 40px;
+button.close {
+    width: 40px;
     height: 40px;
     position: absolute;
     top: 5px;
-    right: 5px}
+    right: 5px
+    }
 button.close:after {
     content: "\00d7";
     width: 100%;
     font-size: 2rem;
 }
+
+td.cart-img {width: 160px;}
+td.cart-price {width: 100px;}
+td.cart-qty, td.cart-remove {width: 70px;}
 /* Position and appearence of product remove buttons in cart */
 tr[id^='product_id_'] {position: relative;}
 tr[id^='product_id_'] button.close {background: transparent;box-shadow: none;}
@@ -954,6 +967,7 @@ input#input-quantity {text-align: center}
     }
     .mobile_menu.open {
         transform: translateX(0%);
+        backdrop-filter: blur(3px);
     }
     p {text-align: justify} /* Prettyfy text on narrow screens */
     .wrapper {
