UPD: Quick checkout and guest form fixes

--- a/catalog/view/theme/helium/template/checkout/guest_shipping.twig
+++ b/catalog/view/theme/helium/template/checkout/guest_shipping.twig
@@ -281,7 +281,7 @@
   
     {% endif %}
   {% endfor %}
-  <button form="guest_shipping" type="submit" id="button_guest_shipping" class="brimary">{{ button_continue }}</button>
+  <button form="guest_shipping" type="submit" id="button_guest_shipping" class="primary">{{ button_continue }}</button>
 
 </form>
 
