--- a/catalog/view/theme/helium/template/common/cart_modal.twig
+++ b/catalog/view/theme/helium/template/common/cart_modal.twig
@@ -5,16 +5,10 @@
     <table class="table table-striped">
       {% for product in products %}
       <tr id="product_id_{{product.product_id}}">
-        <td class="text-center">
+        <td class="text-center cart-img">
           {% if product.thumb %} 
             <a href="{{ product.href }}">
-              <img 
-                loading="lazy" 
-                src="{{ product.thumb }}" 
-                alt="{{ product.name }}" 
-                title="{{ product.name }}" 
-                class="img-thumbnail" 
-              />
+              <img loading="lazy" src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-thumbnail" />
             </a> 
           {% endif %}
         </td>
@@ -30,7 +24,7 @@
         {% endif %}
         </td>
         <td class="text-right cart-qty"> &times; {{ product.quantity }}</td>
-        <td class="text-right">{{ product.total }}</td>
+        <td class="text-right cart-price">{{ product.total }}</td>
         <td class="text-center cart-remove">
           <button type="button" data-action="cartRemove" data-key="{{ product.cart_id }}" title="{{ button_remove }}" class="close"></button>
         </td>
@@ -68,9 +62,9 @@
         </a>
       </p>
     </div>
-
+        {% include 'helium/template/common/quick_checkout.twig' %}
 
   {% else %}
-    <p class="text-center">{{ text_empty }}</p>
+    <h1 class="text-center">{{ text_empty }}</h1>
   {% endif %}
 </div>
