--- a/catalog/view/theme/helium/template/common/quick_checkout.twig
+++ b/catalog/view/theme/helium/template/common/quick_checkout.twig
@@ -5,15 +5,16 @@
       <label for="payment_address_existing">{{ text_address_existing }}</label>
     </div>
     <div id="payment-existing">
-      <select name="address_id" class="form-control">
+      
         {% for address in addresses %}
           {% if address['address_id'] == address_id %}
-            <option value="{{ address.address_id }}" selected="selected">{{ address.firstname }} {{ address.lastname }}, {{ address.address_1 }}, {{ address.city }}, {{ address.zone }}, {{ address.country }}</option>
+            <input role="radio" type="radio" name="address_id" id="address_{{ address.address_id }}" value="{{ address.address_id }}" checked="checked"/>
+            <label for="address_{{ address.address_id }}">{{ address.firstname }} {{ address.lastname }}, {{ address.address_1 }}, {{ address.city }}</label>
           {% else %}
             <option value="{{ address.address_id }}">{{ address.firstname }} {{ address.lastname }}, {{ address.address_1 }}, {{ address.city }}, {{ address.zone }}, {{ address.country }}</option>
           {% endif %}
         {% endfor %}
-      </select>
+      
     </div>
     <div class="form-control">
       <input id="payment_address_new" type="radio" name="payment_address" value="new" />
@@ -23,7 +24,7 @@
 
   <div id="payment-new">
     <div class="form-group required">
-      <label for="input-payment-firstname">{{ entry_firstname }}</label>
+      <label for="input-payment-firstname">{{ entry_firstname }}, {{ entry_lastname }}</label>
       <input
         type="text"
         name="firstname"
@@ -35,9 +36,6 @@
         autocapitalize="words"
         minlength="3" maxlength="32"
       />
-    </div>
-    <div class="form-group required">
-      <label for="input-payment-lastname">{{ entry_lastname }}</label>
       <input
         type="text"
         name="lastname"
@@ -52,7 +50,19 @@
     </div>
 
     <div class="form-group required">
-      <label for="input-payment-address-1">{{ entry_address_1 }}</label>
+      <label for="input-payment-address-1">{{ entry_city }}, {{ entry_address_1 }}</label>
+      <input 
+        type="text" 
+        name="city" 
+        value="{{ city }}"
+        placeholder="{{ entry_city }}" 
+        id="input-payment-city"
+        inputmode="text"
+        enterkeyhint="next"
+        autocapitalize="words"
+        minlength="3" maxlength="32"
+        autocomplete="on"
+      />
       <input
         type="text"
         name="address_1"
@@ -67,19 +77,30 @@
       />
     </div>
 
+{# 
     <div class="form-group required">
-      <label for="input-payment-city">{{ entry_city }}</label>
-      <input 
-        type="text" 
-        name="city" 
-        value="{{ city }}"
-        placeholder="{{ entry_city }}" 
-        id="input-payment-city"
-        inputmode="text"
+      <label for="input-payment-email">{{ entry_email }}</label>
+      <input
+        type="email"
+        name="email"
+        value="{{ email }}"
+        placeholder="{{ entry_email }}"
+        id="input-payment-email"
+        inputmode="email"
         enterkeyhint="next"
-        autocapitalize="words"
+      />
+    </div> #}
+    <div class="form-group required">
+      <label for="input-payment-telephone">{{ entry_telephone }}</label>
+      <input
+        type="tel"
+        name="telephone"
+        value="{{ telephone }}"
+        placeholder="{{ entry_telephone }}"
+        id="input-payment-telephone"
+        inputmode="tel"
+        enterkeyhint="next"
         minlength="3" maxlength="32"
-        autocomplete="on"
       />
     </div>
 
@@ -118,114 +139,141 @@
     </div>
 
     {% for custom_field in custom_fields %}
-    {% if custom_field.type == 'select' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-        {{ custom_field.name }}
-      </label>
-      <div class="col-sm-10">
-        <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">
-          <option value="">{{ text_select }}</option>
-          {% for custom_field_value in custom_field.custom_field_value %}
-          <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-          {% endfor %}
-        </select>
-      </div>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'radio' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label>{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-          {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="form-control">
-            <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
-            <label>{{ custom_field_value.name }}</label>
-          </div>
-          {% endfor %}
+      {% if custom_field.type == 'select' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
+          {{ custom_field.name }}
+        </label>
+        <div class="col-sm-10">
+          <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">
+            <option value="">{{ text_select }}</option>
+            {% for custom_field_value in custom_field.custom_field_value %}
+            <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
+            {% endfor %}
+          </select>
         </div>
       </div>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'checkbox' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label>{{ custom_field.name }}</label>
-        <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-          {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="form-control">
-            <label>{{ custom_field_value.name }}</label>
-            <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
+      {% endif %}
+      {% if custom_field.type == 'radio' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label>{{ custom_field.name }}</label>
+        <div class="col-sm-10">
+          <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
+            {% for custom_field_value in custom_field.custom_field_value %}
+            <div class="form-control">
+              <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
+              <label>{{ custom_field_value.name }}</label>
+            </div>
+            {% endfor %}
           </div>
-          {% endfor %}
+        </div>
       </div>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'text' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'textarea' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'file' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label>{{ custom_field.name }}</label>
-      <div class="col-sm-10">
-        <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
-        <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
+      {% endif %}
+      {% if custom_field.type == 'checkbox' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label>{{ custom_field.name }}</label>
+          <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
+            {% for custom_field_value in custom_field.custom_field_value %}
+            <div class="form-control">
+              <label>{{ custom_field_value.name }}</label>
+              <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
+            </div>
+            {% endfor %}
+        </div>
       </div>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'date' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input
-        type="date"
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-        value="{{ custom_field.value }}"
-        placeholder="{{ custom_field.name }}"
-        step="1"
-        id="input-payment-custom-field{{ custom_field.custom_field_id }}"
-        data-date-format="YYYY-MM-DD"
-      />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'time' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input 
-        type="time" 
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-        value="{{ custom_field.value }}" 
-        placeholder="{{ custom_field.name }}" 
-        data-date-format="HH:mm" 
-        id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
-        min="08:00" max="20:00"
-        step="3600"
-      />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'datetime' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input 
-        type="datetime-local"
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-        value="{{ custom_field.value }}"
-        placeholder="{{ custom_field.name }}" 
-        data-date-format="YYYY-MM-DD HH:mm" 
-        id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
-        step="3600"
-      />
-    </div>
-    {% endif %}
+      {% endif %}
+      {% if custom_field.type == 'text' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'textarea' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'file' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label>{{ custom_field.name }}</label>
+        <div class="col-sm-10">
+          <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+          <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
+        </div>
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'date' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <input
+          type="date"
+          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
+          value="{{ custom_field.value }}"
+          placeholder="{{ custom_field.name }}"
+          step="1"
+          id="input-payment-custom-field{{ custom_field.custom_field_id }}"
+          data-date-format="YYYY-MM-DD"
+        />
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'time' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <input 
+          type="time" 
+          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+          value="{{ custom_field.value }}" 
+          placeholder="{{ custom_field.name }}" 
+          data-date-format="HH:mm" 
+          id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
+          min="08:00" max="20:00"
+          step="3600"
+        />
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'datetime' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <input 
+          type="datetime-local"
+          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
+          value="{{ custom_field.value }}"
+          placeholder="{{ custom_field.name }}" 
+          data-date-format="YYYY-MM-DD HH:mm" 
+          id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
+          step="3600"
+        />
+      </div>
+      {% endif %}
     {% endfor %}
+    {# Shipping methods #}
+    {% if shipping_methods %}
+      {% for shipping_method in shipping_methods %}
+        {% if not shipping_method.error %}
+          {% if shipping_method.quote %}
+            {% for quote in shipping_method.quote %}
+              <div class="form-control">
+                {% if quote.code == code or not code %}
+                  {% set code = quote.code %}
+                    <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" checked="checked" />
+                  {% else %}
+                    <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" />
+                  {% endif %}
+                <label for="{{ quote.code }}">{{ quote.title }} - {{ quote.text }}</label>
+              </div>
+            {% endfor %}
+          {% else %}
+            <div class="form-control">
+              <input type="radio" value="{{ shipping_method.code }}" id="shipping_{{ shipping_method.code }}" name="shipping_method"/>
+              <label for="shipping_{{ shipping_method.code }}">{{ shipping_method.title }}</label>
+            </div>
+          {% endif %}
+        {% else %}
+          <div class="alert alert-danger">{{ shipping_method.error }}</div>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
   </div>
   <div class="buttons clearfix">
     <div class="pull-right">
