UPD: Remove unused field

--- a/catalog/view/theme/helium/template/product/product.twig
+++ b/catalog/view/theme/helium/template/product/product.twig
@@ -140,7 +140,7 @@
             class="form-control"
             oninput="animatePrice()"
           />
-          <input type="hidden" name="product_id" value="{{ product_id }}" />
+          {# <input type="hidden" name="product_id" value="{{ product_id }}" /> #}
         </div>
         <div class="btn-group">
 
