--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -812,7 +812,7 @@ aside>div.module{display: flex; flex-direction: column;}
 /* Product flags */
 .flags {position: absolute; top: 0; left: 0; width: 0}
 span.product-flag {background: #777;margin: 6px 0 0 -6px;padding: 2px 7px;border-radius: calc(var(--radius) * .7);color: #eaeaea;font-size: 0.8rem;white-space: nowrap;display: inline-block;opacity: .6;transition: opacity var(--time);text-shadow: 0px 0px 3px #111;box-shadow: 0 0 5px #555;background-size: 400% 400%;animation: gradient 5s ease infinite;text-transform: uppercase;}
-span.product-flag i::before     {font-size: 1rem}
+span.product-flag i::before     {font-size: 1rem; color: #fff}
 span.product-flag.wishlist      {background-image: linear-gradient(92deg, #cd3232, #a12727)}
 span.product-flag.sale          {background-image: linear-gradient(92deg, #dd320b, #c28d1a)}
 span.product-flag.discount      {background-image: linear-gradient(92deg, #e5205b, #e56820)}
