--- a/catalog/view/theme/helium/css/fontello.css
+++ b/catalog/view/theme/helium/css/fontello.css
@@ -63,7 +63,7 @@
 .icon-user:before { content: '\e804'; } /* '' */
 .icon-star:before { content: '\e805'; } /* '' */
 .icon-star-empty:before { content: '\e806'; } /* '' */
-.icon-heart:before {content: '\e807';color: var(--danger);} /* '' */
+.icon-heart:before {content: '\e807';color: var(--color-red);} /* '' */
 .icon-heart-empty:before { content: '\e808'; } /* '' */
 .icon-edit:before { content: '\e809'; } /* '' */
 .icon-eye:before { content: '\e80a'; } /* '' */
