--- a/catalog/view/theme/helium/css/fontello.css
+++ b/catalog/view/theme/helium/css/fontello.css
@@ -51,6 +51,8 @@
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-smooth: antialiased;
+  
 
   /* Uncomment for 3D effect */
   text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3);
