--- a/catalog/view/theme/helium/template/common/custom_fields.twig
+++ b/catalog/view/theme/helium/template/common/custom_fields.twig
@@ -1,122 +1,123 @@
 {% for custom_field in custom_fields %}
-  {% if custom_field.type == 'select' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">
-        {{ custom_field.name }}
-      </label>
-        <select 
-          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-          id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
-          class="form-control">
-          <option value="">{{ text_select }}</option>
-          {% for custom_field_value in custom_field.custom_field_value %}
-            <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-          {% endfor %}
-        </select>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'radio' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <span class="h3">{{ custom_field.name }}</span>
-      {% for custom_field_value in custom_field.custom_field_value %}
-      <div class="form-control">
-        <input 
-          type="radio" 
-          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-          value="{{ custom_field_value.custom_field_value_id }}" 
-          id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}"
+  {% if custom_field.location == location %}
+    {% if custom_field.type == 'select' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">
+          {{ custom_field.name }}
+        </label>
+          <select 
+            name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+            id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">
+            <option value="">{{ text_select }}</option>
+            {% for custom_field_value in custom_field.custom_field_value %}
+              <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
+            {% endfor %}
+          </select>
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'radio' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <span class="h3">{{ custom_field.name }}</span>
+        {% for custom_field_value in custom_field.custom_field_value %}
+        <div class="form-control">
+          <input 
+            type="radio" 
+            name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+            value="{{ custom_field_value.custom_field_value_id }}" 
+            id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}"
+            />
+          <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'checkbox' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <span class="h3">{{ custom_field.name }}</span>
+        {% for custom_field_value in custom_field.custom_field_value %}
+        <div class="form-control">
+          <input 
+            type="checkbox" 
+            name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" 
+            value="{{ custom_field_value.custom_field_value_id }}" 
+            id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}"
           />
-        <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
+          <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
+        </div>
+        {% endfor %}
       </div>
-      {% endfor %}
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'checkbox' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <span class="h3">{{ custom_field.name }}</span>
-      {% for custom_field_value in custom_field.custom_field_value %}
-      <div class="form-control">
+      {% endif %}
+      {% if custom_field.type == 'text' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
         <input 
-          type="checkbox" 
-          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" 
-          value="{{ custom_field_value.custom_field_value_id }}" 
-          id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}"
+          type="text" 
+          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+          value="{{ custom_field.value }}" 
+          placeholder="{{ custom_field.name }}" 
+          id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
         />
-        <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
       </div>
-      {% endfor %}
-    </div>
+      {% endif %}
+      {% if custom_field.type == 'textarea' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <textarea 
+          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+          rows="5" 
+          placeholder="{{ custom_field.name }}" 
+          id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
+          class="form-control">{{ custom_field.value }}</textarea>
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'file' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label>{{ custom_field.name }}</label>
+        <button type="button" id="button-{{ type }}-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+        <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" />
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'date' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <input
+          type="date"
+          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
+          value="{{ custom_field.value }}"
+          placeholder="{{ custom_field.name }}"
+          id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}"
+          min="{{ now|date('Y-m-d') }}"
+        />
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'time' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <input 
+          type="time" 
+          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
+          value="{{ custom_field.value }}" 
+          placeholder="{{ custom_field.name }}" 
+          data-date-format="HH:mm" 
+          id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
+          min="08:00" max="20:00"
+          data-action="correctTime" 
+        />
+      </div>
+      {% endif %}
+      {% if custom_field.type == 'datetime' %}
+      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
+        <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+        <input 
+          type="datetime-local"
+          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
+          value="{{ custom_field.value }}"
+          placeholder="{{ custom_field.name }}" 
+          min="{{ now|date('Y-m-d\\TH:i') }}"
+          id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
+          data-action="correctTime" 
+        />
+      </div>
     {% endif %}
-    {% if custom_field.type == 'text' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input 
-        type="text" 
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-        value="{{ custom_field.value }}" 
-        placeholder="{{ custom_field.name }}" 
-        id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
-      />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'textarea' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <textarea 
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-        rows="5" 
-        placeholder="{{ custom_field.name }}" 
-        id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
-        class="form-control">{{ custom_field.value }}</textarea>
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'file' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label>{{ custom_field.name }}</label>
-      <button type="button" id="button-{{ type }}-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
-      <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'date' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input
-        type="date"
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-        value="{{ custom_field.value }}"
-        placeholder="{{ custom_field.name }}"
-        id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}"
-        min="{{ now|date('Y-m-d') }}"
-      />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'time' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input 
-        type="time" 
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-        value="{{ custom_field.value }}" 
-        placeholder="{{ custom_field.name }}" 
-        data-date-format="HH:mm" 
-        id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
-        min="08:00" max="20:00"
-        data-action="correctTime" 
-      />
-    </div>
-    {% endif %}
-    {% if custom_field.type == 'datetime' %}
-    <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label for="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-      <input 
-        type="datetime-local"
-        name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-        value="{{ custom_field.value }}"
-        placeholder="{{ custom_field.name }}" 
-        min="{{ now|date('Y-m-d\\TH:i') }}"
-        id="input-{{ type }}-custom-field{{ custom_field.custom_field_id }}" 
-        data-action="correctTime" 
-      />
-    </div>
   {% endif %}
 {% endfor %}
