UPD: Move quick_checkout.twig to its folder

--- a/catalog/view/theme/helium/template/common/cart_modal.twig
+++ b/catalog/view/theme/helium/template/common/cart_modal.twig
@@ -62,7 +62,8 @@
         </a>
       </p>
     </div>
-        {% include 'helium/template/common/quick_checkout.twig' %}
+    {# Quick checkout #}
+    {% include 'helium/template/checkout/quick_checkout.twig' %}
 
   {% else %}
     <h1 class="text-center">{{ text_empty }}</h1>
